@@ -1,3 +1,11 @@
+2006-12-10  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/Makefile.am:
+	* src/lsof.cpp:
+
+	Stupid regular expression support.
+
 2006-12-07  Benoît Dejean  <benoit@placenet.org>
 
 	* src/sysinfo.cpp:
